fix: better landing page and header on mobile

--- a/source/stylesheets/pages/_index.scss
+++ b/source/stylesheets/pages/_index.scss
@@ -13,7 +13,6 @@ body.index {
 }
 .header-block {
   @include span(4);
-  background: url('/img/assets/landing-01.png') no-repeat center center fixed;
   background-size: cover;
   background-color: $dark-gray;
   height: 100vh;
@@ -21,15 +20,19 @@ body.index {
   color: white;
 
   @include breakpoint($break-tablet) {
-
+    background: url('/img/assets/landing-01.png') no-repeat center center fixed;
   }
 
   h1 {
-    margin-top: 200px;
+    margin-top: 4 * $base-line-height;
     font-size: 40px;
     font-weight: 300;
     text-align: center;
     animation-delay: .4s;
+
+    @include breakpoint($break-tablet) {
+      margin-top: 8 * $base-line-height;
+    }
   }
 
   h2 {
