--- a/source/stylesheets/partials/_header.scss
+++ b/source/stylesheets/partials/_header.scss
@@ -29,6 +29,8 @@ header {
   .logo-link {
     margin-top: 14px;
     float: left;
+    z-index: 997;
+    position: absolute;
   }
 
   .logo {
